--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,7 @@ body {
     color: beige;
 }
 
-#form {
+.container {
     /* background-color: aqua; */
     background: transparent;
     backdrop-filter: blur(4px) brightness(80%);
@@ -74,7 +74,7 @@ p {
     position: fixed;
     z-index: 1;
 }
-#start_game {
+.button {
     width: 80%;
     height: 40px;
     border-radius: 40px;
@@ -86,5 +86,16 @@ p {
     margin: 15px auto;
 }
 #canvas {
-    font-family: "Emulogic", sans-serif;
+    font-family: "Emulogic", sans-serif;  
+}
+
+#form {
+    display: none;
+}
+#player-name {
+    display: none;
+}
+.loader {
+    margin: 60px 30px;
+    color: antiquewhite;
 }
